# academy-track-selection-portal

./: .env.example  .gitignore  .gitnore  Dockerfile  README.md  docker-compose.yml  import_students.py  locustfile.py  pyproject.toml  requirements.txt  reset_db.py
.agents/skills/: spectra-apply  spectra-archive  spectra-ask  spectra-audit  spectra-debug  spectra-discuss  spectra-ingest  spectra-propose
.agents/skills/spectra-apply/: SKILL.md
.agents/skills/spectra-ingest/: SKILL.md
.agents/skills/spectra-propose/: SKILL.md
.security-audit/archive/2026-04-06-project-wide-security-audit-2026-04-06/: .audit.yaml  plan.md  report-en.md  report-tw.md  scope.md  tasks.md
backend/: database.py  mailer.py  main.py  reminder.py  security.py
backend/utils/: __init__.py  email.py  email.py.bak
docs/: README.md  api-and-data-model.md  backend-frontend-reference.md  known-gaps.md  operations-and-maintenance.md  project-overview.md  student-reading-guide.md  system-architecture.md  writing-policy.md
docs/security/2026-04-05_codex_audit/: README.md  finding-template.md  initial-audit-report.md  methodology-and-scope.md
docs/security/2026-04-06_codex_audit/: README.md  dependency-vulnerability-scan.md  initial-audit-report.md  methodology-and-scope.md
frontend/: admin-login.html  admin.html  choose.html  config.js  index.html  login.html  style.css
frontend/static/: config.js  style.css
nginx/: Dockerfile  entrypoint.sh  nginx.conf
openspec/changes/dockerize-with-uv-smtp-relay/: .openspec.yaml  proposal.md  tasks.md
scripts/: buildx.sh  docker-entrypoint.sh
(+36 files in other folders)
