[project]
name = "academy-track-selection-portal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "bcrypt==4.0.1",
    "python-multipart",
    "python-dotenv",
    "aiosmtplib",
    "gunicorn",
    "apscheduler",
    "reportlab",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
