[project]
name = "academy-track-selection-portal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary",
    "python-jose[cryptography]",
    "bcrypt==4.0.1",
    "python-multipart",
    "python-dotenv",
    "aiosmtplib",
    "gunicorn",
    "apscheduler",
    "reportlab",
    "fastapi[standard]>=0.135.3",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
